golog.py:  Added a check to make sure the base log path exists before trying to write any logs there.  Now if the path doesn't exist an attempt will be made to create it. gateone.js:  Increased the length of time before `GateOne.Storage.fileCheckAction()` gives up trying to load dependencies.  This is to give slower servers time to minify JS/CSS. gateone.js:  Removed the "print" and "theme" stores from the `fileCache` IndexedDB. gateone.js:  Added support for removing obsolete object stores from `GateOne.Storage.dbOjbect` and `GateOne.Storage.openDB()`.  Also improved the overall robustness of the `GateOne.Storage` model. gateone.js:  Added `GateOne.Storage.dbVersion` which just holds the current version of the IndexedDB database.  This value needs to be incremented by 1 every time we make a change to the database model. terminal.js:  Tweaked `GateOne.Terminal.alignTerminal()` to include some sanity checks for obviously wrong calculations that browser sometimes throw at us.  I also made it always reduce the amount it adjusts terminals by 1 pixel because--for whatever reason--it seems to always off by 1.  "Welcome to the web" I guess. terminal.js:  Modified how `GateOne.Terminal.newTerminal()` creates the initial scrollback buffer to ensure that terminals say bottom-aligned so as to not have characters cut off at the top of the screen. terminal.js:  Changed how the scrollback buffer gets written to and restored from disk.  Instead of using localStorage (which is slow and synchronous) it is now using GateOne.Storage to take advantage of indexedDB for fast, asynchronous writes. terminal.css:  Added 'border: 0' to the '.✈pastearea' class so that it will line up a bit more precisely. app_terminal.py:  Changed the default value for the `kill_dtach` argument to `True`.  This should fix the bug where timed-out sessions were not having their dtach sessions killed. gateone.py:  Changed `kill_all_sessions()` to use 'kill_session_callbacks' instead of 'timeout_callbacks'.  This

--- a/gateone/applications/terminal/templates/terminal.css
+++ b/gateone/applications/terminal/templates/terminal.css
@@ -10,6 +10,7 @@
     left: 0;
     bottom: 1.1em;
     padding: 0;
+    border: 0;
     right: 3em;
     z-index: 500;
     margin: 0;
